--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ img {
 .conteiner {
     max-width: 1140px;
     margin:0 auto;
+    margin-top: 10px;
     
 }
 
@@ -40,7 +41,7 @@ a{
 /**HEADER**/
 
 .main-header {
-    background-color: #255ee9;
+    background-color: #0084FD ;
     padding: 19px 0;
     color: white;
     
@@ -101,7 +102,7 @@ a{
 /**HERO**/
 
 .card {
-    background-color: rgb(155, 190, 255);
+    background-color: #B5DDFF;
     padding: 0;
     border-radius: 20px;
     margin:10px;
@@ -112,7 +113,7 @@ a{
 }
 
 .card_hero {
-    background-color: rgb(155, 190, 255);
+    background-color: #B5DDFF;
     padding: 0;
     border-radius: 20px;
     margin:10px;
@@ -135,7 +136,7 @@ a{
 
 .title_hero {
     padding-bottom: 20px;
-    color: #255ee9;
+    color: #0084FD;
 }
 
 .p_hero {
@@ -144,7 +145,7 @@ a{
 }
 
 .button--blue {
-    background-color: #255ee9;
+    background-color: #0084FD;
     text-align: center;
     color: white;
     width: 150px;
@@ -152,7 +153,7 @@ a{
 }
 
 .icon_hero {
-    color: #255ee9;
+    color: #0084FD;
     width: 100%;
     font-size: 100px;
     text-align: center;
@@ -179,3 +180,48 @@ a{
     }
     
 }
+
+
+/**parte PLANNING**/
+
+.conteiner_plan {
+    width: 100%;
+    background-color: #9792E4;
+}
+
+.row_plan {
+    display: flex;
+    justify-content: center;
+}
+
+.col_plan{
+    width: 30%;
+    border: 2px dashed red;
+    align-items: center;
+    padding: 20px;
+    
+}
+
+/****col left***/
+.img_plan {
+    width: 400px;
+    height: 350px;
+    padding-bottom: 150px;
+    padding-left: 70px;
+    padding-top: 50px;
+}
+
+.title_plan {
+    color: white;
+    padding-bottom: 50px;
+    font-size: 20px;
+}
+
+.p_plan {
+    color: white;
+    font-size: 13px;
+    padding-bottom: 50px;
+}
+
+
+
