FIX- Aggiunto margine per distanziare planning e hero in mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -14,6 +14,7 @@
         flex-basis: calc(100%/2);
         display: flex;
         flex-wrap: wrap;
+        margin-top: 60px;
     }
 
    .col_plan{
