--- a/css/style.css
+++ b/css/style.css
@@ -328,3 +328,53 @@ a{
 .text_card_testimonials p, h3 {
     margin: 20px;
 }
+
+
+
+/**BENEFITS RULES***/
+.conteiner_benefits {
+    background-color: #9792E4;
+    text-align: center;
+    padding: 40px;
+}
+
+.conteiner_benefits h2 {
+    color: white;
+    font-size: 50px;
+    padding-bottom: 30px;
+}
+
+
+
+.row_benefits {
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+.card_ben {
+    background-color: white;
+    padding: 20px;
+    text-align: left;
+    flex-basis: 30%;
+}
+
+.card_ben h1 {
+    padding-left: 20px;
+    color: #9792E4;
+    font-size: 80px;
+}
+.card_ben p {
+    padding-left: 20px;
+}
+
+.violet-button {
+    background-color: #9792E4;
+    color: white;
+    border-radius: 30px;
+    text-align: center;
+    width: 100px;
+    margin-top: 20px;
+    margin-left: 20px;
+    padding: 10px;
+}
