--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,7 @@ a{
     width: 60%;
     height: 200px;
     padding: 20px;
+    
 }
 
 .img_testimonials {
@@ -292,7 +293,7 @@ a{
     width: 200px;
     height: 200px;
     background-size:cover;
-    object-fit: cover;
+    aspect-ratio: 1; /**ATTENZIONE,non va dato il bg_img ma inserita l'img a cui dare queste proprietà: object-position: center; & object-fit**/
     border-radius: 50%;
     margin-right: 50px;
     
@@ -488,4 +489,13 @@ a{
     padding: 20px;
     width: 200px;
     
+}
+
+
+/**FOOTER RULES***/
+.conteiner_footer{
+    background-color:#333333 ;
+    text-align: center;
+    font-size: 10px;
+    padding: 40px;
 }
